# stmm-input-bt

./: .gitignore  .gitmodules  CHANGES  INSTALL  README.md
bluetoother/: AUTHORS  CMakeLists.txt  INSTALL  README
bluetoother/scripts/: install_bluetoother.py  uninstall_bluetoother.py
bluetoother/src/: btservice.cc  btservice.h  config.cc.in  config.h  hciadapter.cc  hciadapter.h  hcisocket.cc  hcisocket.h  main.cc  tootherwindow.cc  tootherwindow.h
libstmm-input-gtk-bt/: .gitignore  90stmm-input-gtk-bt.dlp.in  CMakeLists.txt  INSTALL  NEWS  README.md  stmm-input-gtk-bt-defs.cmake  stmm-input-gtk-bt.dlp.in  stmm-input-gtk-bt.pc.in
libstmm-input-gtk-bt/doc/: CMakeLists.txt
libstmm-input-gtk-bt/examples/keys-srv/: .gitignore  CMakeLists.txt  README
libstmm-input-gtk-bt/examples/keys-srv/src/: keyswindow.cc  keyswindow.h  main.cc
libstmm-input-gtk-bt/include/stmm-input-gtk-bt/: btgtkdevicemanager.h  libmain.h  private-recycler.h  stmm-input-gtk-bt-config.h  stmm-input-gtk-bt.h
libstmm-input-gtk-bt/scripts/: install_libstmm-input-gtk-bt.py  uninstall_libstmm-input-gtk-bt.py
libstmm-input-gtk-bt/src/: bluetoothsources.cc  bluetoothsources.h  btgtkbackend.cc  btgtkbackend.h  btgtkdevicemanager.cc  btgtkkeysdevice.cc  btgtkkeysdevice.h  btgtklistenerextradata.cc  btgtklistenerextradata.h  btgtkwindowdata.cc  btgtkwindowdata.h  keypacket.h  libmain.cc  stmm-input-gtk-bt-config.cc.in  stmm-input-gtk-bt.cc
libstmm-input-gtk-bt/test/: CMakeLists.txt  fakebtgtkbackend.cc  fakebtgtkbackend.h  fakebtgtkdevicemanager.h  fakebtgtkwindowdata.h  fixtureBtDM.h  fixtureGlibApp.h  fixtureTestBase.h  fixturevariantEventClasses.h  testBtGtkDeviceManager.cxx
scripts/: arch_create.py  checktidy.py  debian_create.py  googletest_create_links.py  install_stmm-input-bt-all.py  sourcepackage.py  testall.py  uninstall_stmm-input-bt-all.py
scripts/priv/: checktidy.py  dd_install_stmm-input-bt-all.py  debian_src_versions.cmake  pk_install_stmm-input-bt-all.py
scripts/priv/arch.orig/: PKGBUILD.in
scripts/priv/debian.orig/: changelog.in  control.in  copyright  libstmm-input-gtk-bt-dev.install  libstmm-input-gtk-bt@STMM_INPUT_GTK_BT_MAJOR_VERSION@.install.in  libstmm-input-gtk-bt@STMM_INPUT_GTK_BT_MAJOR_VERSION@.shlibs.in  postinst  postrm  rules  stmm-input-btkb.1  stmm-input-btkb.install  stmm-input-btkb.manpages
share/cmake/: CommonDoxy.cmake  CommonTesting.cmake  CommonUtil.cmake
stmm-input-btkb/: CMakeLists.txt  INSTALL  NEWS  README  stmm-input-btkb-defs.cmake
stmm-input-btkb/data/applications/: com.efanomars.stmm-input-btkb.desktop
stmm-input-btkb/data/glib-2.0/schemas/: com.efanomars.stmm-input-btkb.gschema.xml
stmm-input-btkb/scripts/: install_stmm-input-btkb.py  uninstall_stmm-input-btkb.py
stmm-input-btkb/src/: addrscreen.cc  addrscreen.h  btclientsources.cc  btclientsources.h  btkbwindow.cc  btkbwindow.h  btkeyclient.cc  btkeyclient.h  btkeyservers.cc  btkeyservers.h  circularbuffer.cc  circularbuffer.h  config.cc.in  config.h  gtkutilpriv.cc  gtkutilpriv.h  hardwarekey.cc  hardwarekey.h  inputstrings.cc  inputstrings.h  keyboardscreen.cc  keyboardscreen.h  keypacket.cc  keypacket.h  keyscreen.cc  keyscreen.h  main.cc  util.cc  util.h  weightscreen.cc  weightscreen.h
stmm-input-bttest/: CMakeLists.txt  INSTALL  NEWS  README
stmm-input-bttest/scripts/: install_stmm-input-bttest.py  uninstall_stmm-input-bttest.py
stmm-input-bttest/src/: addrdialog.cc  addrdialog.h  btclientsources.cc  btclientsources.h  btkeyclient.cc  btkeyclient.h  btkeyservers.cc  btkeyservers.h  bttestwindow.cc  bttestwindow.h  circularbuffer.h  config.cc.in  config.h  gdkkeyconverterevdev.cc  hardwarekey.h  inputstrings.cc  inputstrings.h  keyboarddialog.cc  keyboarddialog.h  keydialog.cc  keydialog.h  keypacket.h  main.cc  weightdialog.cc  weightdialog.h
